--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
-    "youtube-api-search": "^0.0.5"
+    "youtube-api-v3-search": "^1.1.3"
   },
   "devDependencies": {
     "react-scripts": "2.1.0"
