--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "youtube-api-v3-search": "^1.1.3"
   },
   "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "react-scripts": "2.1.0"
   },
   "scripts": {
