--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
+    "serve": "^10.1.2",
     "youtube-api-v3-search": "^1.1.3"
   },
   "devDependencies": {
